--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@
 
 buildscript {
     ext{
-        kotlin_version = '1.3.31'
+        kotlin_version = '1.4.21'
         room_version = "2.3.0-beta01"
         lifecycle_version = "2.3.0"
         arch_version = "2.1.0"
         activity_version= "1.2.0"
         fragment_version= "1.3.0"
+        paging_version="3.0.0-beta01"
 
 
     }
@@ -18,7 +19,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
